final run through

--- a/html/doxygen_crawl.html
+++ b/html/doxygen_crawl.html
@@ -9,6 +9,8 @@
 </head>
 <body>
 <a href="annotated.html"/>
+<a href="classapp_1_1_main-members.html"/>
+<a href="classapp_1_1_main.html"/>
 <a href="classconfig_1_1tsp_dynamic_1_1_t_s_p_state-members.html"/>
 <a href="classconfig_1_1tsp_dynamic_1_1_t_s_p_state.html"/>
 <a href="classes.html"/>
@@ -182,8 +184,6 @@
 <a href="classlocal__search_1_1complement_1_1_update_parameter-members.html"/>
 <a href="classlocal__search_1_1complement_1_1_update_parameter.html"/>
 <a href="classlocal__search_1_1complement_1_1_update_parameter.html#aa88a78351c0bc5de77f1ad05bee29e11"/>
-<a href="classmetaheurictics_1_1strategy_1_1_strategy-members.html"/>
-<a href="classmetaheurictics_1_1strategy_1_1_strategy.html"/>
 <a href="classmetaheuristics_1_1generators_1_1_distribution_estimation_algorithm-members.html"/>
 <a href="classmetaheuristics_1_1generators_1_1_distribution_estimation_algorithm.html"/>
 <a href="classmetaheuristics_1_1generators_1_1_distribution_estimation_algorithm.html#a5d496021c3310be8abbc218d4bc63baa"/>
@@ -479,6 +479,8 @@
 <a href="classmetaheuristics_1_1generators_1_1_tabu_search.html#ada5be4a7b947390cc70ad6b9bf33d412"/>
 <a href="classmetaheuristics_1_1generators_1_1_tabu_search.html#adc6c6a8184388aafc9d143d63ca7ffde"/>
 <a href="classmetaheuristics_1_1generators_1_1_tabu_search.html#add5beec981c395092cd1101d8aa66850"/>
+<a href="classmetaheuristics_1_1strategy_1_1_strategy-members.html"/>
+<a href="classmetaheuristics_1_1strategy_1_1_strategy.html"/>
 <a href="classproblem_1_1definition_1_1_codification-members.html"/>
 <a href="classproblem_1_1definition_1_1_codification.html"/>
 <a href="classproblem_1_1definition_1_1_codification.html#a01a0c8247d76d4c4c32c7f3e51c2d5f8"/>
@@ -526,6 +528,7 @@
 <a href="classproblem__operators_1_1_mutation_operator.html#a43be2feec4090f04b60fe76712673747"/>
 <a href="classproblem__operators_1_1_mutation_operator.html#abaa5390974638b870365cf649bf5510b"/>
 <a href="dir_06e434142d945b4603028208ab5b89ad.html"/>
+<a href="dir_11ecb430970c7e294f7fd78f94a62d14.html"/>
 <a href="dir_322366561a7f79899a3235cfb338a134.html"/>
 <a href="dir_4bb7bafe5b1cf15fbb7d536fa39b6f7b.html"/>
 <a href="dir_571df264468909d86be80a03ee921c9c.html"/>
